a1/brendan_gordon/TEST_PROGRAMS/invalidtype/anderson_santossilva/LHSwrongRHS.min
var x: float;

x = "hi";

